# zaps

./: .gitleaks.toml  .gitleaksignore  Readme.md  SUPPORT.md  docker-compose.yml  gitleaks.toml  package-lock.json
contracts/: Cargo.toml
contracts/.cargo/: audit.toml
contracts/contracts/allbridge_receiver/src/: lib.rs
contracts/contracts/naira_token/src/: lib.rs
contracts/contracts/social_graph/src/: lib.rs
contracts/contracts/social_payment/src/: lib.rs
contracts/contracts/user_registry/src/: lib.rs
contracts/contracts/yield_vault/: Cargo.toml
contracts/contracts/yield_vault/src/: lib.rs
contracts/cross-chain-bridge/src/: lib.rs
contracts/cross-chain-bridge/test_snapshots/test/: test_add_duplicate_relayer_fails.1.json  test_add_remove_relayer.1.json  test_claim_inbound_emits_event.1.json  test_claim_inbound_increments_total_inbound.1.json  test_claim_inbound_marks_nonce_used.1.json  test_claim_inbound_replay_rejected.1.json  test_claim_inbound_transfers_tokens_to_recipient.1.json  test_confirm_after_timeout_fails.1.json  test_confirm_already_confirmed_fails.1.json  test_confirm_emits_event.1.json  test_confirm_nonexistent_transfer_fails.1.json  test_confirm_outbound_marks_confirmed.1.json  test_ethereum_chain_accepted.1.json  test_inbound_above_max_fails.1.json  (+37 more)
contracts/escrow-contract/src/: lib.rs  test.rs
contracts/governance/src/: lib.rs  test.rs
contracts/loyalty-points/src/: test.rs
contracts/payment-router/src/: lib.rs  test.rs
contracts/payment-splitter/src/: lib.rs
contracts/user-identity-contract/src/: lib.rs  test.rs
(+428 files in other folders)
